2006-04-14 Tilman Sauerbeck (tilman at crux nu)
        * ChangeLog, NEWS: Moved old ChangeLog to NEWS