@@ -1,2 +1,3 @@
 2006-04-14 Tilman Sauerbeck (tilman at crux nu)
         * ChangeLog, NEWS: Moved old ChangeLog to NEWS
+        * pkgmk.in: Write warnings and errors to stderr instead of stdout
